--- a/resume.html
+++ b/resume.html
@@ -87,12 +87,12 @@
       <div id="social">
       <div class="row social-container">
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
                <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
                <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
                <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
                <li><a href="https://github.com/fish-yan/"><i class="fa fa-github"></i></a></li>
-               <li><a href="https://blog.csdn.net/fish_yan_"><i class="fa fa-csdn"></i></a></li>
+               <!-- <li><a href="https://blog.csdn.net/fish_yan_"><i class="fa fa-csdn"></i></a></li> -->
                <!-- <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
             </ul>
       </div>
