--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
          <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
 
          <ul id="nav" class="nav">
-            <li><a href="https://fishyan.cn/">fishyan</a></li>
+            <li><a href="https://fish-yan.github.io">fishyan</a></li>
             <li class="current"><a class="smoothscroll" href="#home">首页</a></li>
             <li><a class="smoothscroll" href="#about">关于我</a></li>
             <li><a class="smoothscroll" href="#resume">个人简历</a></li>
