--- a/web/openonto.html
+++ b/web/openonto.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <a href="https://link.onto.app">OPEN LINK</a>
     <script>
         window.onload = function() {
             setTimeout(() => {
