--- a/web/openonto.html
+++ b/web/openonto.html
@@ -10,7 +10,7 @@
     <script>
         window.onload = function() {
             setTimeout(() => {
-                window.location.href = "https://link.onto.app"
+                window.location.href = "ontoprovider://link"
             }, 500);
         }
     </script>
