--- a/web/openonto.html
+++ b/web/openonto.html
@@ -3,10 +3,28 @@
 
 <head>
     <meta charset="utf-8">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+
+        a {
+            font-size: 4rem;
+            text-align: center;
+            text-decoration: none;
+            color: #333;
+        }
+    </style>
 </head>
 
 <body>
-    <a href="https://link.onto.app">OPEN LINK</a>
+    <a href="https://link.onto.app">OPEN ONTO</a>
     <script>
         window.onload = function() {
             setTimeout(() => {
